--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ djangorestframework==3.8.2
 docutils==0.14            # via botocore
 feedparser==5.2.1
 jmespath==0.9.3           # via boto3, botocore
+lxml==4.2.3
 psycopg2==2.7.4
 python-dateutil==2.6.1    # via botocore
 pytz==2018.4              # via django
